--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:mysql://localhost:3306/bibliosfera_prueba?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/bibliosfera?serverTimezone=UTC&useSSL=false 
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
